# api/model/auth/auth.model.go
@@ -1,6 +1,7 @@
 package authmodel
 
 import (
+	basemodel "gateway/api/model/base"
 	"gateway/proto/auth"
 )
 
@@ -22,4 +23,24 @@ type GenerateLoginSecretResponse struct {
 
 type LoginSecret struct {
 	Secret string `json:"secret"`
+}
+
+type ListEmployee struct {
+	Code string    `json:"code"`
+	Data Employees `json:"data"`
+}
+
+type Employees struct {
+	*basemodel.PageMetadata
+	Employees []*auth.User `json:"employees"`
+}
+
+type ListDepartment struct {
+	Code string      `json:"code"`
+	Data Departments `json:"data"`
+}
+
+type Departments struct {
+	*basemodel.PageMetadata
+	Departments []*auth.Department `json:"departments"`
 }
